@@ -1002,6 +1002,7 @@ delete_noiface=.. could not find interface $1
 delete_user=Deleting administration user ..
 delete_group=Deleting administration group ..
 delete_home=Deleting home directory ..
+delete_ehome=.. rm command failed : $1
 delete_webalizer=Deleting scheduled Webalizer reporting ..
 delete_webalizerno=.. failed to find web log
 delete_emaking=Before deletion command failed : $1
